--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         * {
             background-color: rgb(32,33,36);
         }
-        h1 {
+        h1{
             color: brown;
         }
-        h1:hover {
+        h1:hover,a:hover {
             text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.575);
             cursor: pointer;
             color: rgb(102, 21, 21);
@@ -25,9 +25,17 @@
             border-radius: 5px;
             border: white solid 1px;
         }
+        a {
+            color: blue;
+            text-decoration: none;
+        }
+        a:hover{
+            color: rgb(0, 0, 145);
+        }
     </style>
     <h1>Precione F12 e clique em console</h1>
     <img src="./imgs/img.png" alt="Imagem Console">
     <h1>Precione F12 e clique em console</h1>
+    <h1><a href="https://www.youtube.com/watch?v=i6Oi-YtXnAU&t=5915s&ab_channel=DevAprender">Clique Aqui para ver o vídeo!!</a></h1>
 </body>
 </html>
