--- a/index.html
+++ b/index.html
@@ -10,27 +10,26 @@
 <body>
     <style>
         * {
-            background-color: rgb(32,33,36);
+            background-color: #202222;
         }
         h1{
-            color: brown;
+            color: yellow;
         }
         h1:hover,a:hover {
             text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.575);
-            cursor: pointer;
-            color: rgb(102, 21, 21);
-            text-shadow: 1px 1px 1px rgb(97, 43, 43)(80, 44, 44);
+            color: rgb(216, 216, 0);
+            text-shadow: 1px 1px 1px rgb(255, 255, 255)(80, 44, 44);
         }
         img {
             border-radius: 5px;
             border: white solid 1px;
         }
         a {
-            color: blue;
+            color: rgb(57, 57, 255);
             text-decoration: none;
         }
         a:hover{
-            color: rgb(0, 0, 145);
+            color: rgb(48, 48, 214);
         }
     </style>
     <h1>Precione F12 e clique em console</h1>
