--- a/index.html
+++ b/index.html
@@ -31,10 +31,33 @@
         a:hover{
             color: rgb(48, 48, 214);
         }
+        .button {
+            width: 30vw;
+            height: 15vh;
+            text-decoration: none;
+            color: white;
+            border-radius: 10px;
+            border: 1px solid antiquewhite;
+            box-shadow: 1px 1px 3px rgb(17, 16, 16);
+            background-color: rgb(0, 95, 95);
+        }
+        .button:hover{
+            background-color: rgb(0, 73, 73);
+            color: white;
+            cursor: pointer;
+            border-color: #202222;
+            transition: 2ms;
+        }
     </style>
-    <h1>Precione F12 e clique em console</h1>
+    <h1>Pressione F12 e clique em console</h1>
     <img src="./imgs/img.png" alt="Imagem Console">
-    <h1>Precione F12 e clique em console</h1>
+    <h1>Pressione F12 e clique em console</h1>
     <h1><a href="https://www.youtube.com/watch?v=i6Oi-YtXnAU&t=5915s&ab_channel=DevAprender">Clique Aqui para ver o vídeo!!</a></h1>
+    <script src="./script.js">
+    </script>
+
+    <section width="100vw" height="100%">
+        <input type="button" value="Clique Aqui!!" class="button">
+    </section>
 </body>
 </html>
